Fixed All/Any Modal for dark mode. Cleaned up some error messaging.

--- a/frontend/src/components/Create/Create.css
+++ b/frontend/src/components/Create/Create.css
@@ -30,3 +30,6 @@
 .form-content.dark-mode .image-info {
     filter: invert(100%);
 }
+.modal.dark-mode .modal-content {
+    background-color: #363636;
+}
